<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Mgr</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Posts</string>
    <string name="title_section2">Record</string>
    <string name="title_section3">Cosik</string>
    <string name="button">Guzik</string>
    <string name="edit_message">Edit message</string>
    <string name="button_send">Send</string>
    <string name="title_section4">Moja zakładeczka</string>
    <string name="created_by">by Marcin Ziółek</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="welcome_msg">Welcome, you are now logged in.</string>
    <string name="app_id">136711786499009</string>
    <string name="settings">Settings</string>
    <string name="skip_login">Skip login</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="btn_logout_from_facebook">Sign out</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="record_button">Record</string>
    <string name="play_audio">Play recorded sounds</string>
    <string name="rec_progress">Recording progress</string>
    <string name="chronometer_initial_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="title_activity_take_photos">Take Photos</string>
    <string name="take_photos">Take pictures</string>
    <string name="skip_photos">Skip photos</string>
    <string name="GIFpreview">Preview GIF</string>
    <string name="publish_and_share">Publish and share to Facebook</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="preview_audio">Preview audio</string>
    <string name="profile">Profile</string>
    <string name="empty"></string>
    <string name="gifit">GIF it! ></string>
    <string name="camera_switch_button">Camera switch button</string>
    <string name="publish">Publish</string>
</resources>
